Initial text response changes

--- a/src/main/resources/templates/viewVisualizations.html
+++ b/src/main/resources/templates/viewVisualizations.html
@@ -7,7 +7,7 @@
   <!-- Include jQuery library -->
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="../loadGraphs.js" ></script>
+  <script src="../loadVisualizations.js" ></script>
 </head>
 <body>
 <h1>Form: <span id="formId_span" th:data-backend-id="${formId}" th:text="${formTitle}"></span></h1>
